--- a/login.html
+++ b/login.html
@@ -116,7 +116,7 @@
       <br><br><br><br><br><br>
       <footer class="footer" style="float:bottom">
         <div class="container" style=" background-color:transparent; ">
-          <p class="text-muted" style="text-align : center; color:black"><b>All Copyrights Resereved.&copy;<br>Developers : Amjad Nassar, Aiman Younis <br> ID: 307945402, 204317770</b></p>
+          <p class="text-muted" style="text-align : center; color:black"><b>All Copyrights Resereved.&copy;<br>Developers : Amjad Nassar, Aiman Younis </b></p>
         </div>
       </footer>
             </div>
